# slambook2

./: .gitignore  Environments.md  README.md
ch2/: CMakeLists.txt  libHelloSLAM.cpp
ch3/: CMakeLists.txt
ch3/examples/: coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
test/: test.cpp
